--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -15,9 +15,11 @@
     <div class="container">
         <header>
             <h1><i class="fas fa-wallet"></i> Student Expense Tracker</h1>
-            <!-- User Info Area -->
-             <div id="user-info" style="display: none;"> <!-- Start hidden -->
-                <span id="welcome-message" style="margin-right: 15px; font-weight: bold;"></span>
+            <div id="user-info" style="display: none;">
+                <span id="welcome-message"></span>
+                <button id="theme-toggle" class="btn btn-secondary" title="Toggle Dark Mode">
+                    <i id="theme-icon" class="fas fa-moon"></i>
+                </button>
                 <button id="logout-btn" class="btn btn-logout">
                     <i class="fas fa-sign-out-alt"></i> Logout
                 </button>
